:bug: fixed dark mode
fixed dark mode of navbar dropdown list

--- a/src/StyleSheets/news.css
+++ b/src/StyleSheets/news.css
@@ -3,6 +3,7 @@
 #headline {
 	font-family: var(--primaryFont);
 	font-weight: 800 !important;
+	font-size: 3rem;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 	text-shadow: 3px 7px 12px rgba(114, 114, 114, 0.8);
@@ -43,4 +44,10 @@
 	background-color: #ffc229;
 	box-shadow: #ff6314 0 -6px 8px inset;
 	transform: scale(1.125);
+}
+
+@media (max-width: 520px) {
+	#headline {
+		font-size: 1.7rem;
+	}
 }
